wip: pull translations from Transifex

--- a/src/main/resources/com/adobe/epubcheck/messages/MessageBundle_de.properties
+++ b/src/main/resources/com/adobe/epubcheck/messages/MessageBundle_de.properties
@@ -183,7 +183,7 @@ OPF_018b=The 'remote-resources' property was declared in the Package Document, b
 OPF_019=Das 'spine'-Element wurde in der OPF-Datei nicht gefunden.
 OPF_020=Sehr viele 'spine'-Einträge gefunden!
 OPF_021=Nicht-definiertes URI-Schema im 'href'-Attribut benutzt: '%1$s'
-OPF_025=Property value list '%1$s' is not allowed, only one value must be specified.
+OPF_025=Der Eigenschaft '%1$s' kann nur ein einziger Wert zugewiesen werden.
 OPF_026=Ungültigen Eigenschaftswert gefunden: '%1$s'
 OPF_027=Nicht definierte Eigenschaft: '%1$s'
 OPF_028=Nicht definierter Präfix: '%1$s'
