--- a/src/main/resources/com/adobe/epubcheck/messages/MessageBundle_es.properties
+++ b/src/main/resources/com/adobe/epubcheck/messages/MessageBundle_es.properties
@@ -40,7 +40,7 @@ CSS_002=Se ha encontrado una referencia vacía o NULL.
 CSS_003=Solo se permiten codificaciones UTF-8 y UTF-16: detectado %1$s.
 CSS_004=Solo se permiten codificaciones UTF-8 y UTF-16: detectado %1$s BOM.
 CSS_005=Se han encontrado conflictos con alternancias de estilos: %1$s.
-CSS_006=CSS selector specifies fixed position.
+CSS_006=El selector CSS especifica una posición 'fixed'.
 CSS_007=La propiedad 'font-face' %1$s hace referencia a un tipo de fuente no estándar %2$s.
 CSS_008=Ha ocurrido un error analizando el archivo CSS: %1$s.
 CSS_009=El uso de elementos CSS como columnas, transformaciones, transiciones, modelos de caja o KeyFrames puede causar errores de paginación.
@@ -112,7 +112,7 @@ HTM_046=Un elemento con formato fijo no tiene medidas definidas para el viewport
 HTM_046_SUG=Una declaración viewport es obligatoria para elementos con formato fijo.
 HTM_047=El viewport HTML no tiene atributo height y/o width.
 HTM_047_SUG=El viewport debe declarar tanto la anchura (width) como la altura (height).
-HTM_048=SVG Fixed-Layout Documents must have a 'viewBox' attribute (on the outermost 'svg' element).
+HTM_048=Los documentos SVG Fixed-Layout deben tener el atributo 'viewBox' (en el elemento 'svg' más externo).
 HTM_049=El elemento html no tiene una declaración xmlns que apunte a 'http://www.w3.org/1999/xhtml'.
 HTM_049_SUG=Añada xmlns="http://www.w3.org/1999/xhtml" al elemento html.
 HTM_050=Se ha encontrado un atributo epub:type="pagebreak" en el documento.
@@ -123,11 +123,11 @@ HTM_053=Se ha encontrado un enlace a un archivo externo (file://) en el archivo:
 #media
 MED_001=El poster de vídeo debe ser un tipo de imagen soportado.
 MED_002=El elemento %1$s no incluye fallback.
-MED_003=A manifest fallback must be provided for image resource '%1$s' of type '%2$s'.
+MED_003=Debe proporcionar un recurso 'fallback' en el manifiesto para el recurso de imagen '%1$s' de tipo '%2$s'.
 MED_004=La cabecera del archivo de imagen puede estar dañada.
 MED_005=Se ha encontrado un recurso de audio Media Overlay %1$s que hace referencia a un tipo de audio no estándar %2$s.
 MED_006=Algunos navegadores no soportan imágenes SVG que utilizan nombres de archivo en la propiedad xlink:href.
-MED_007=Foreign resources can only be referenced from 'source' elements with an explicit 'type' attribute; found resource '%1$s' of foreign type '%2$s'.
+MED_007=Los atributos ajenos solo pueden referenciarse desde elementos 'source' con un atributo explícito 'type'. Se ha encontrado el recurso '%1$s' de tipo '%2$s'.
 
 #NAV EPUB v3 Table of contents
 NAV_001=El archivo nav no está soportado en EPUB v2.
@@ -139,10 +139,10 @@ NAV_006=Archivos de contenido contienen elementos 'figure' pero el Documento de 
 NAV_007=Archivos de contenido contienen elementos 'table' pero el Documento de Navegación no tiene un listado de tablas (epub:type="lot").
 NAV_008=Archivos de contenido contienen elementos 'video' pero el Documento de Navegación no tiene un listado de clips de vídeo (epub:type="lov").
 NAV_009=Los enlaces 'region-based' de navegación deben apuntar a documentos Fixed-Layout.
-NAV_010='%1$s' nav must not link to remote resources; found link to '%2$s'.
-NAV_011='%1$s' nav must be in reading order; link target '%2$s' is before the previous link's target in %3$s order.
+NAV_010='%1$s' nav no puede enlazar a recursos externos. Se ha encontrado un enlace a '%2$s'.
+NAV_011=nav '%1$s' debe tener un orden de lectura; el destino del enlace '%2$s' es previo al anterior enlace de destino %3$s en el orden global.
 NAV_011_SUG.spine=spine
-NAV_011_SUG.document=document
+NAV_011_SUG.document=documento
 
 #NCX EPUB v2 Table of Contents
 NCX_001=El identificador NCX ('%1$s') no concuerda con el identificador OPF ('%2$s').
@@ -178,12 +178,12 @@ OPF_014=La propiedad '%1$s' debe declararse en el archivo OPF.
 OPF_015=La propiedad '%1$s' no debe estar declarada en el archivo OPF.
 OPF_016=El elemento \"rootfile\" no presenta su atributo  \"full-path\", el cual es obligatorio.
 OPF_017=El atributo \"full-path\" del elemento \"rootfile\" no debe estar vacío.
-OPF_018=The 'remote-resources' property was declared in the Package Document, but no reference to remote resources has been found.
-OPF_018b=The 'remote-resources' property was declared in the Package Document, but no reference to remote resources has been found; please check scripted content to make sure the property is legit.
+OPF_018=La propiedad 'remote-resources' se ha declarado en el Documento Empaquetado, pero no se ha encontrado ninguna referencia a recursos remotos.
+OPF_018b=La propiedad 'remote-resources' se ha declarado en el Documento Empaquetado, pero no se ha encontrado ninguna referencia a recursos remotos. Compruebe el contenido para aasegurarse que la propiedad es apropiada.
 OPF_019=No se ha encontrado la etiqueta <spine> en el archivo OPF.
 OPF_020=Hay un número excesivo de elementos dentro de la sección <spine>.
 OPF_021=Uso de un esquema URI no registrado en href: '%1$s'.
-OPF_025=Property value list '%1$s' is not allowed, only one value must be specified.
+OPF_025=El valor de propiedad '%1$s' no está permitido; solo debe especificar un valor.
 OPF_026=Se ha encontrado un valor de propiedad erróneo: '%1$s'.
 OPF_027=Propiedad no definida: '%1$s'.
 OPF_028=Prefijo no declarado: '%1$s'.
@@ -248,26 +248,26 @@ OPF_082=Se ha encontrado una colección de diccionario EPUB que contiene más de
 OPF_083=Se ha encontrado una colección de diccionario EPUB que no contiene un Documento de Mapa de Búsqueda.
 OPF_084=Se ha encontrado una colección de diccionario EPUB que contiene el recurso '%1$s', que no es ni un Documento de Mapa de Búsqueda ni un Archivos de Contenido XHTML.
 OPF_085=El valor 'dc:identifier' '%1$s' está definido como UUID, pero no es un UUID válido.
-OPF_086=Property '%1$s' is deprecated. Consider using %2$s instead.
-OPF_086_SUG.default=a custom prefixed property
-OPF_086_SUG.marc21xml-record=the 'record' keyword and the media-type "application/marcxml+xml"
-OPF_086_SUG.mods-record=the 'record' keyword and the media-type "application/mods+xml"
-OPF_086_SUG.onix-record=the 'record' keyword with the properties attribute value 'onix'
-OPF_086_SUG.xml-signature=no signature-identifying link
-OPF_086_SUG.xmp-record=the 'record' keyword with the properties attribute value 'xmp'
-OPF_086b=epub:type value '%1$s' is deprecated. Consider using %2$s instead.
-OPF_086b_SUG.default=a custom prefixed value
-OPF_086b_SUG.annoref=open annotations
-OPF_086b_SUG.annotation=open annotations
-OPF_086b_SUG.help=the 'tip' property
-OPF_086b_SUG.marginalia=a bare 'aside' element
-OPF_086b_SUG.note=a 'footnote' or 'endnote' property
-OPF_086b_SUG.rearnote=the 'endnote' property
-OPF_086b_SUG.rearnotes=the 'endnotes' property
-OPF_086b_SUG.sidebar=a bare 'aside' element
-OPF_086b_SUG.warning=the 'notice' property
-OPF_087=epub:type value '%1$s' is not allowed on documents of type '%2$s'.
-OPF_088=Unrecognized epub:type value '%1$s'.
+OPF_086=La propiedad '%1$s' es obsoleto. Utilice %2$s en su lugar.
+OPF_086_SUG.default=una propiedad prefijada personalizada
+OPF_086_SUG.marc21xml-record=la palabra clave 'record' y el media-type "application/marcxml+xml"
+OPF_086_SUG.mods-record=la palabra clave 'record' y el media-type "application/mods+xml"
+OPF_086_SUG.onix-record=la palabra clave 'record' con el valor de atributo de propiedades 'onix'
+OPF_086_SUG.xml-signature=no existe enlace signature-identifying
+OPF_086_SUG.xmp-record=la palabra clave 'record' con el valor de atributo de propiedades 'xmp'
+OPF_086b=El valor de epub:type '%1$s' es obsoleto. Utilice %2$s en su lugar.
+OPF_086b_SUG.default=un valor prefijado personalizado
+OPF_086b_SUG.annoref=anotaciones abiertas
+OPF_086b_SUG.annotation=anotaciones abiertas
+OPF_086b_SUG.help=la propiedad 'tip'
+OPF_086b_SUG.marginalia=un elemento 'aside' aislado
+OPF_086b_SUG.note=una propiedad 'footnote' o 'endnote'
+OPF_086b_SUG.rearnote=la propiedad 'endnote'
+OPF_086b_SUG.rearnotes=la propiedad 'endnotes'
+OPF_086b_SUG.sidebar=un elemento 'aside' aislado
+OPF_086b_SUG.warning=la propiedad 'notice'
+OPF_087=el valor epub:type '%1$s' no está permitido en documentos de tipo '%2$s'.
+OPF_088=Valor no reconocido de epub:type '%1$s'.
 OPF_089=The 'alternate' link rel keyword cannot be paired with other keywords.
 OPF_090=It is encouraged to use MIME media type '%1$s' instead of '%2$s'.
 
@@ -305,11 +305,11 @@ RSC_003=No se ha encontrado en el contenedor una etiqueta de archivo raíz con m
 RSC_004=El archivo '%1$s' no se ha podido desencriptar.
 RSC_005=Error al analizar el archivo: %1$s
 RSC_006=No se permite la referencia al recurso remoto: el recurso debe estar en el OCF.
-RSC_006b=Resource '%1$s' is located outside the EPUB Container; please check the resource is retrieved in scripted content.
+RSC_006b=El recurso '%1$s' se localiza fuera del contenedor EPUB. Compruebe que el recurso se halla dentro del contenido referenciado.
 RSC_007=El recurso referenciado '%1$s' no se ha encontrado en el EPUB.
 RSC_007w=El recurso referenciado '%1$s' no se ha encontrado en el EPUB.
 RSC_008=El recurso referenciado '%1$s' no está declarado en el <manifest> del archivo OPF.
-RSC_009=A non-SVG image resource should not be defined with a fragment identifier.
+RSC_009=Un recurso de imagen que no sea del tipo SVG no debe definirse con un identificador fragmentado.
 RSC_010=Se ha encontrado una referencia a un tipo de recurso no estándar.
 RSC_011=Se ha encontrado una referencia a un recurso que no es un elemento incluido en <spine>.
 RSC_012=No se ha definido el identificador fragmentado.
