--- a/src/main/resources/com/adobe/epubcheck/messages/MessageBundle_fr.properties
+++ b/src/main/resources/com/adobe/epubcheck/messages/MessageBundle_fr.properties
@@ -40,7 +40,7 @@ CSS_002=Référence vide ou NULL présente.
 CSS_003=Seuls les encodages UTF-8 et UTF-16 sont autorisés, '%1$s' détecté.
 CSS_004=Seuls les encodages UTF-8 et UTF-16 sont autorisés, '%1$s' BOM détecté.
 CSS_005=Attributs de style alternatif contradictoires trouvés : '%1$s'.
-CSS_006=CSS selector specifies fixed position.
+CSS_006=Le sélecteur CSS spécifie une position fixe
 CSS_007=La référence font-face '%1$s' se réfère à une fonte de type non-standard '%2$s'.
 CSS_008=Une erreur s'est produite lors de l'analyse de la CSS : '%1$s'.
 CSS_009=L'utilisation de certaines parties CSS comme Columns, Transforms, Transitions, box-sizing ou KeyFrames peut causer des problèmes de pagination.
@@ -112,7 +112,7 @@ HTM_046=L'item de format 'fixed' n'a pas de 'viewport' défini.
 HTM_046_SUG=Une déclaration de 'viewport' est requise pour les items de format 'fixed'.
 HTM_047=Il manque la hauteur (height) et/ou la largeur (width) pour le 'viewport' HTML.
 HTM_047_SUG=La déclaration du 'viewport' doit déclarer à la fois la largeur (width) et la hauteur (height).
-HTM_048=SVG Fixed-Layout Documents must have a 'viewBox' attribute (on the outermost 'svg' element).
+HTM_048=Les Documents SVG à Mise en Page Fixe doivent avoir un attribut 'viewBox' (sur l'élément 'svg' le plus externe).
 HTM_049=L'élément 'html' n'a pas de 'xmlns' déterminé par 'http://www.w3.org/1999/xhtml'.
 HTM_049_SUG=Ajoutez xmlns="http://www.w3.org/1999/xhtml" pour l'élément 'html'.
 HTM_050=Un attribut epub:type="pagebreak" est présent dans le document de contenu.
@@ -123,11 +123,11 @@ HTM_053=Lien de fichier externe (file://) trouvé dans le fichier : '%1$s'.
 #media
 MED_001=Le 'poster' de 'video' doit être un type d'image Core Media Type.
 MED_002=L'élément %1$s ne fournit pas de fallback.
-MED_003=A manifest fallback must be provided for image resource '%1$s' of type '%2$s'.
+MED_003=Un repli manifeste doit être prévu pour la ressource image '%1$s' de type '%2$s'.
 MED_004=L'en-tête du fichier image pourrait être corrompu.
 MED_005=La référence audio Media Overlay %1$s d'un type audio non-standard %2$s a été trouvée.
 MED_006=Certains navigateurs ne supportent pas les images rendues en SVG qui utilisent un nom de fichier dans la propriété xlink:href.
-MED_007=Foreign resources can only be referenced from 'source' elements with an explicit 'type' attribute; found resource '%1$s' of foreign type '%2$s'.
+MED_007=Les ressources étrangères ne peuvent être référencées qu'à partir d'éléments 'source' avec un attribut 'type' explicite ; ressource trouvée '%1$s' de type étranger '%2$s'.
 
 #NAV EPUB v3 Table of contents
 NAV_001=Le fichier nav n'est pas supporté pour les EPUB v2.
@@ -139,8 +139,8 @@ NAV_006=Les Documents de Contenu contiennent des éléments 'figure' mais le Doc
 NAV_007=Les Documents de Contenu contiennent des éléments 'table' mais le Document de Navigation n'a pas de liste des tableaux (epub:type="lot").
 NAV_008=Les Documents de contenu contiennent des éléments 'video' mais le Document de Navigation n'a pas de liste des clips vidéo (epub:type="lov").
 NAV_009=Les liens de navigation basés sur une région doivent pointer vers des Documents Fixed-Layout.
-NAV_010='%1$s' nav must not link to remote resources; found link to '%2$s'.
-NAV_011='%1$s' nav must be in reading order; link target '%2$s' is before the previous link's target in %3$s order.
+NAV_010=nav '%1$s' ne doit pas être lié à des ressources distantes ; lien trouvé vers '%2$s'.
+NAV_011=nav '%1$s' doit être dans l'ordre de lecture ; la cible du lien '%2$s' est avant la cible du lien précédent dans l'ordre %3$s.
 NAV_011_SUG.spine=spine
 NAV_011_SUG.document=document
 
@@ -178,12 +178,12 @@ OPF_014=La propriété '%1$s' devrait être déclarée dans le fichier OPF.
 OPF_015=La propriété '%1$s' ne devrait pas être déclarée dans le fichier OPF.
 OPF_016=L'élément \"rootfile\" n'a pas son attribut obligatoire \"full-path\".
 OPF_017=L'attribut \"full-path\" sur l'élément \"rootfile\" ne doit pas être vide.
-OPF_018=The 'remote-resources' property was declared in the Package Document, but no reference to remote resources has been found.
-OPF_018b=The 'remote-resources' property was declared in the Package Document, but no reference to remote resources has been found; please check scripted content to make sure the property is legit.
+OPF_018=La propriété 'remote-resources' a été déclarée dans le Document de Package, mais aucune référence aux ressources distantes n'a été trouvée.
+OPF_018b=La propriété 'remote-resources' a été déclarée dans le Document de Package, mais aucune référence aux ressources distantes n'a été trouvée ; veuillez vérifier le contenu du script pour vous assurer que la propriété est légitime.
 OPF_019=L'élément 'spine' est introuvable dans le fichier OPF.
 OPF_020=Nombre excessif d'items du spine.
 OPF_021=Type de protocole URI non-autorisé trouvé dans 'href' : '%1$s'.
-OPF_025=Property value list '%1$s' is not allowed, only one value must be specified.
+OPF_025=La liste des valeurs de propriété '%1$s' n'est pas autorisée, une seule valeur doit être spécifiée.
 OPF_026=Valeur de la propriété malformée trouvée : '%1$s'.
 OPF_027=Propriété non-définie : '%1$s'.
 OPF_028=Préfixe non-déclaré : '%1$s'.
@@ -248,28 +248,28 @@ OPF_082=Une collection de dictionnaire EPUB contenant plus d'un index de clés d
 OPF_083=Une collection de dictionnaire EPUB ne contenant pas d'index de clés de recherche (Search Key Map) a été trouvée.
 OPF_084=La ressource  '%1$s' a été trouvée dans une collection de dictionnaire EPUB mais n'est ni un index de clés de recherche (Search Key Map) ni un document de contenu XHTML.
 OPF_085=La valeur de 'dc:identifier' '%1$s' est indiquée en tant que UUID, mais est un UUID invalide.
-OPF_086=Property '%1$s' is deprecated. Consider using %2$s instead.
-OPF_086_SUG.default=a custom prefixed property
-OPF_086_SUG.marc21xml-record=the 'record' keyword and the media-type "application/marcxml+xml"
-OPF_086_SUG.mods-record=the 'record' keyword and the media-type "application/mods+xml"
-OPF_086_SUG.onix-record=the 'record' keyword with the properties attribute value 'onix'
-OPF_086_SUG.xml-signature=no signature-identifying link
-OPF_086_SUG.xmp-record=the 'record' keyword with the properties attribute value 'xmp'
-OPF_086b=epub:type value '%1$s' is deprecated. Consider using %2$s instead.
-OPF_086b_SUG.default=a custom prefixed value
-OPF_086b_SUG.annoref=open annotations
-OPF_086b_SUG.annotation=open annotations
-OPF_086b_SUG.help=the 'tip' property
-OPF_086b_SUG.marginalia=a bare 'aside' element
-OPF_086b_SUG.note=a 'footnote' or 'endnote' property
-OPF_086b_SUG.rearnote=the 'endnote' property
-OPF_086b_SUG.rearnotes=the 'endnotes' property
-OPF_086b_SUG.sidebar=a bare 'aside' element
-OPF_086b_SUG.warning=the 'notice' property
-OPF_087=epub:type value '%1$s' is not allowed on documents of type '%2$s'.
-OPF_088=Unrecognized epub:type value '%1$s'.
-OPF_089=The 'alternate' link rel keyword cannot be paired with other keywords.
-OPF_090=It is encouraged to use MIME media type '%1$s' instead of '%2$s'.
+OPF_086=La propriété '%1$s' est obsolète. Envisagez d'utiliser %2$s à la place.
+OPF_086_SUG.default=une propriété préfixée personnalisée
+OPF_086_SUG.marc21xml-record=le mot-clé 'record' et le type de média "application/marcxml+xml".
+OPF_086_SUG.mods-record=le mot-clé 'record' et le type de média "application/mods+xml".
+OPF_086_SUG.onix-record=le mot-clé 'record' avec l'attribut de valeur propriété 'onix'.
+OPF_086_SUG.xml-signature=pas de lien d'identification de signature
+OPF_086_SUG.xmp-record=le mot-clé 'record' avec l'attribut de valeur propriété 'xmp'.
+OPF_086b=epub : le type de valeur '%1$s' est obsolète. Envisagez d'utiliser %2$s à la place.
+OPF_086b_SUG.default=une valeur préfixée personnalisée
+OPF_086b_SUG.annoref=annotations ouvertes
+OPF_086b_SUG.annotation=annotations ouvertes
+OPF_086b_SUG.help=la propriété 'tip'
+OPF_086b_SUG.marginalia=un simple élément 'à part'
+OPF_086b_SUG.note=une  propriété 'footnote' or 'endnote'
+OPF_086b_SUG.rearnote=la propriété 'endnote'
+OPF_086b_SUG.rearnotes=la propriété 'endnotes'
+OPF_086b_SUG.sidebar=un simple élément 'à part'
+OPF_086b_SUG.warning=la propriété 'notice'
+OPF_087=epub : la valeur de type '%1$s' n'est pas autorisée sur les documents de type '%2$s'.
+OPF_088=Epub non reconnu : valeur de type '%1$s'.
+OPF_089=Le mot-clé 'alternate' link rel ne peut pas être associé à d'autres mots-clés.
+OPF_090=Il est recommandé d'utiliser le type de support MIME '%1$s' au lieu de '%2$s'.
 
 #Package
 PKG_001=Validation de l'EPUB selon la version %1$s mais version %2$s détectée.
@@ -305,11 +305,11 @@ RSC_003=Aucun élément 'rootfile' avec le media type 'application/oebps-package
 RSC_004=Le fichier '%1$s' ne peut pas être décrypté.
 RSC_005=Erreur lors de l'analyse du fichier: %1$s
 RSC_006=Référence à une ressource externe non-autorisée ; La ressource doit être placée dans l'OCF.
-RSC_006b=Resource '%1$s' is located outside the EPUB Container; please check the resource is retrieved in scripted content.
+RSC_006b=La ressource '%1$s' est situé à l'extérieur du conteneur EPUB ; veuillez vérifier que la ressource est récupérée dans le contenu du script.
 RSC_007=La ressource référencée '%1$s' n'est pas présente dans l'EPUB.
 RSC_007w=La ressource référencée '%1$s' n'est pas présente dans l'EPUB.
 RSC_008=La ressource référencée '%1$s' n'est pas déclarée dans le manifest de l'OPF.
-RSC_009=A non-SVG image resource should not be defined with a fragment identifier.
+RSC_009=Une ressource image non-SVG ne doit pas être définie avec un identifiant de fragment.
 RSC_010=Référence à une ressource non-standard présente.
 RSC_011=Une référence à une ressource qui n'est pas un élément du spine a été trouvée.
 RSC_012=L'identificateur de fragment n'est pas défini.
