--- a/src/main/resources/com/adobe/epubcheck/util/messages_es.properties
+++ b/src/main/resources/com/adobe/epubcheck/util/messages_es.properties
@@ -7,21 +7,21 @@ there_were_errors=\nPrueba finalizada con errores
 there_were_warnings=\nPrueba finalizada con advertencias
 
 messages=Mensajes
-counter_fatal_zero=0 fatals
-counter_fatal_one=1 fatal
-counter_fatal_many=%1$d fatals
-counter_error_zero=0 errors
+counter_fatal_zero=0 errores fatales
+counter_fatal_one=1 error fatal
+counter_fatal_many=%1$d errores fatales
+counter_error_zero=0 errores
 counter_error_one=1 error
-counter_error_many=%1$d errors
-counter_warn_zero=0 warnings
-counter_warn_one=1 warning
-counter_warn_many=%1$d warnings
-counter_info_zero=0 infos
-counter_info_one=1 info
-counter_info_many=%1$d infos
-counter_usage_zero=0 usages
-counter_usage_one=1 usage
-counter_usage_many=%1$d usages
+counter_error_many=%1$d errores
+counter_warn_zero=0 advertencias
+counter_warn_one=1 advertencia
+counter_warn_many=%1$d advertencias
+counter_info_zero=0 indicaciones
+counter_info_one=1 indicación
+counter_info_many=%1$d indicaciones
+counter_usage_zero=0 usos
+counter_usage_one=1 uso
+counter_usage_many=%1$d usos
 
 error_processing_unexpanded_epub=\nLa prueba no puede procesar epubs expandidos\n
 deleting_archive=\nSe ha cancelado la creación del epub porque se han detectado errores.\n
